--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
   "dependencies": {
     "date-fns": "^2.0.0-beta.4",
     "diacriticless": "1.0.1",
+    "lodash": "^4.17.15",
     "lodash.assign": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.filter": "^4.6.0",
     "lodash.foreach": "^4.5.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
     "vue-select": "^3.1.0"
   },
   "devDependencies": {
